added css for colors and fonts to over ride the bootstrap theme

--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -3,9 +3,9 @@
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
-  color: white;
+  color: $light-gray;
   position: relative;
-  margin: 20px
+  margin: 20px;
 }
 .card-user {
   position: absolute;
