--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
+$red: #DB3069;
+$blue: #5CC8FF;
+$yellow: #F5D547;
 $orange: #E67E22;
-$green: #32B796;
+$green: #70EE9C;
 $gray: #000000;
-$light-gray: #F4F4F4;
+$light-gray: #DCDCDD;
