--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,26 +1,42 @@
 ---
 title: Le Wagon - Middleman
 ---
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.2) 100%), url('http://ichef.bbci.co.uk/wwfeatures/wm/live/1280_640/images/live/p0/1b/lc/p01blcm1.jpg');">
   <div class="banner-content">
-    <h1>Le Wagon Berlin</h1>
-    <p>Learn to code with us in Berlin</p>
-    <a class="btn btn-primary btn-lg">Start now</a>
-  </div>
+    <h1>Welcome  home</h1>
+    <p>Book unique homes and experience a city like a local.</p>
+    <form action="#" class="form-inline">
+     <input type="text" class="form-control input-lg" placeholder="Where?">
+     <input type="text" class="form-control input-lg" placeholder="When?">
+     <select name="" id="" class="form-control input-lg">
+       <option value="1">1 guest</option>
+       <option value="2">2 guests</option>
+       <option value="3">3 guests</option>
+     </select>
+     <input type="submit" class="btn btn-primary btn-lg" value="Search">
+   </form>
+ </div>
 </div>
 
-<div class="container">
+<div class="container" id="home-flats">
   <div class="row">
-    <% data.cities.each do |city| %>
+    <% data.flats.each do |owner, flat| %>
     <div class="col-xs-12 col-sm-4">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-        <div class="card-category">Popular</div>
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= flat.url %>);">
+        <div class="card-category"><%= flat.city_name %></div>
         <div class="card-description">
-          <h2><%= city.name %></h2>
-          <p><%= city.tagline %></p>
+          <h2><%= flat.name %></h2>
+          <p><%= flat.description %></p>
+          <p class="rating">
+            <i class="fa fa-star" style="color: #ffb400"></i>
+            <i class="fa fa-star" style="color: #ffb400"></i>
+            <i class="fa fa-star" style="color: #ffb400"></i>
+            <i class="fa fa-star" style="color: #ffb400"></i>
+            <i class="fa fa-star" style="color: #ffb400"></i>
+          </p>
         </div>
-        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-        <a class="card-link" href="#" ></a>
+        <%= image_tag flat.photo, alt: "alttext", class: "card-user" %>
+        <%= link_to "", "flats/#{owner}.html", class: "card-link" %>
       </div>
     </div>
     <% end %>
