--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -1,11 +1,10 @@
 .card {
-  height: 175px;
+  height: 200px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
   color: $light-gray;
   position: relative;
-  margin: 20px;
 }
 .card-user {
   position: absolute;
@@ -48,3 +47,6 @@
   opacity: 0.1;
 }
 
+#home-flats {
+    padding: 100px 0;
+}
